# ChangeLog
All notable changes to this project will be documented in this file.
Todas as mudanças notáveis neste projeto serão documentadas neste arquivo.


## [ 2.0 ] - 2021-12-13 #############################################

### Added / Adicionado
 - Files and Sources:
    - Added RELEASE file.
 - Code:
    - Added application name.
###

### Changed / Modificado
 - Optimized import modules.
###

### Fixed / Corrigido
 - Fixed error:
-----
Traceback (most recent call last):
  File "/usr/share/whats/whats.py", line 267, in eventFilter
    if obj.parent() == self:
TypeError: parent(self, QModelIndex): not enough arguments
-----
###

#####################################################################


## [ 1.3 ] - 2021-11-06 #############################################

### Added / Adicionado
 - Added funcionality for window transparency.
 - Added settings for size font.
 - Enabled settings for enable javascript, plugins and
   autoload images.
###

### Changed / Modificado
 - Modify Opacity to int in settings.json.
###mensagem de navegador desatualizado

### Fixed / Corrigido
 - Ajust items in settings window.
###

#####################################################################


## [ 1.2 ] - 2021-11-04 #############################################

### Added / Adicionado
 - Added funcionality for options in settings.
###

### Changed / Modificado
 - Changed title for about.
###

### Fixed / Corrigido
 - Fixed startup minimized to tray.
###

#####################################################################


## [ 1.1 ] - 2021-11-02 #############################################

### Added / Adicionado
 - Added specifc menu for links:
    - Open link in the browser.
    - Copy link to clipboard'.
 - Files and Sources:
    - Added jsonTools.py in src.
    - Added error.png in icon_status folder.
 - Added status bar.
 - Added funcionality for 'Preferencies' menu.
###

### Upgraded / Atualizado
 - Updated install.sh