@@ -14,6 +14,11 @@ Todas as mudanças notáveis neste projeto serão documentadas neste arquivo.
 
 ### Changed / Modificado
  - Optimized import modules.
+ - Refactory code.
+###
+
+### Removed / Removido
+ - Removed 'warning.py'.
 ###
 
 ### Fixed / Corrigido
@@ -40,7 +45,7 @@ TypeError: parent(self, QModelIndex): not enough arguments
 
 ### Changed / Modificado
  - Modify Opacity to int in settings.json.
-###mensagem de navegador desatualizado
+###
 
 ### Fixed / Corrigido
  - Ajust items in settings window.
